[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elimu-mcp"
version = "0.1.0"
description = "MCP server for Kenya education system — school registry, KCSE/KCPE results lookup, HELB loans, TVET programs, and literacy resources. 5 tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9", "pydantic>=2.0"]
keywords = ["mcp","kenya","africa","education","helb","kcse","east-africa","coordination-infrastructure"]

[project.scripts]
elimu-mcp = "elimu_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
